<resources>
    <string name="app_name">ChatMessageView</string>
    <string name="input_hint">Message..</string>
    <string name="unknown">Unknown</string>

    <!-- Delivery status -->
    <string name="sending">Sending</string>
    <string name="sent">Sent</string>
    <string name="seen">Seen</string>
    <string name="error">Error</string>


    <!-- Default setting for demo-->
    <string name="default_text_short">Hello!!</string>
    <string name="default_date">Aujourd\'hui</string>
    <string name="default_info">Partiellement nuageux</string>
    <string name="default_min_temp">MIN°C</string>
    <string name="default_max_temp">MAX°C</string>
    <string name="default_text_long">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="default_time_text">10:30 AM</string>
    <string name="default_date_cell_text">2016/08/08</string>
    <string name="default_user_name_1">Michael</string>
    <string name="default_user_name_2">Alice</string>
    <string name="send">Send</string>
    <string name="attach">Add attachment</string>


</resources>
